<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/button_back"
        android:padding="@dimen/dimen_to_barrier"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/back" />

    <ImageView
        android:id="@+id/user_avatar"
        android:layout_width="@dimen/avatar_profile_size"
        android:layout_height="@dimen/avatar_profile_size"
        android:layout_marginStart="@dimen/common_spacing"
        android:background="@drawable/card_line"
        android:contentDescription="@string/avatar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/back" />

    <ImageView
        android:id="@+id/icon_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/user_avatar"
        app:layout_constraintTop_toTopOf="@id/user_avatar"
        app:layout_constraintBottom_toTopOf="@id/icon_job"
        android:padding="@dimen/dimen_to_barrier"
        app:srcCompat="@drawable/user"
        android:contentDescription="@string/job" />

    <TextView
        android:id="@+id/title_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_spacing"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/title_position"
        app:layout_constraintStart_toEndOf="@id/icon_name"
        app:layout_constraintTop_toTopOf="@id/user_avatar"
        tools:text="@string/name" />

    <ImageView
        android:id="@+id/icon_job"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/user_avatar"
        app:layout_constraintTop_toBottomOf="@id/title_name"
        app:layout_constraintBottom_toBottomOf="@id/user_avatar"
        android:padding="@dimen/dimen_to_barrier"
        app:srcCompat="@drawable/job"
        android:contentDescription="@string/job" />

    <TextView
        android:id="@+id/title_position"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:layout_marginStart="@dimen/common_spacing"
        app:layout_constraintBottom_toTopOf="@id/title_work"
        app:layout_constraintStart_toEndOf="@id/icon_job"
        app:layout_constraintTop_toBottomOf="@id/icon_name"
        tools:text="Student"/>


    <TextView
        android:id="@+id/title_work"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_spacing"
        app:layout_constraintBottom_toBottomOf="@id/user_avatar"
        app:layout_constraintStart_toEndOf="@id/icon_job"
        app:layout_constraintTop_toBottomOf="@id/title_position"
        tools:text="Netology"/>

    <androidx.constraintlayout.widget.Group
        android:id="@+id/work_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="icon_job, title_position, title_work"/>

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="user_avatar" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_spacing"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@id/header"
        tools:listitem="@layout/fragment_wall" />


</androidx.constraintlayout.widget.ConstraintLayout>