<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="@dimen/common_spacing"
    android:layout_marginBottom="@dimen/common_spacing"
    app:cardElevation="@dimen/card_elevation">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/card_line"
        android:paddingHorizontal="@dimen/common_spacing"
        android:paddingTop="@dimen/common_spacing">

        <ImageView
            android:id="@+id/avatar"
            android:layout_width="@dimen/posts_avatar_size"
            android:layout_height="@dimen/posts_avatar_size"
            android:layout_margin="@dimen/dimen_to_barrier"
            android:background="@drawable/card_line"
            android:contentDescription="@string/description_post_author_avatar"
            android:padding="@dimen/padding_frame_avatar"
            app:layout_constraintBottom_toBottomOf="@id/header"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/author"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/common_spacing"
            android:ellipsize="end"
            android:singleLine="true"
            app:layout_constraintBottom_toTopOf="@id/author_job"
            app:layout_constraintEnd_toStartOf="@id/menu"
            app:layout_constraintStart_toEndOf="@id/avatar"
            app:layout_constraintTop_toTopOf="@id/avatar"
            app:layout_constraintVertical_chainStyle="packed"
            tools:text="John Wick" />

        <TextView
            android:id="@+id/author_job"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/common_spacing"
            android:ellipsize="end"
            android:singleLine="true"
            app:layout_constraintBottom_toTopOf="@id/published"
            app:layout_constraintEnd_toStartOf="@id/menu"
            app:layout_constraintStart_toEndOf="@id/avatar"
            app:layout_constraintVertical_chainStyle="packed"
            tools:text="Freelancer" />

        <TextView
            android:id="@+id/published"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/common_spacing"
            android:textColor="@color/hint_color"
            app:layout_constraintBottom_toBottomOf="@id/avatar"
            app:layout_constraintStart_toEndOf="@id/avatar"
            app:layout_constraintTop_toBottomOf="@id/author_job"
            tools:text="20 апреля 2023" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/menu"
            style="@style/Widget.AppTheme.Buttons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/description_post_menu"
            app:icon="@drawable/menu"
            app:iconGravity="end"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="avatar, published, menu" />

        <ImageView
            android:id="@+id/event_date_icon"
            android:layout_width="@dimen/icon_button_min_size"
            android:layout_height="@dimen/icon_button_min_size"
            android:layout_marginVertical="@dimen/common_spacing"
            android:layout_marginEnd="@dimen/common_spacing"
            android:src="@drawable/event_date"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/header"
            android:contentDescription="@string/date_of_event" />

        <TextView
            android:id="@+id/event_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/common_spacing"
            app:layout_constraintBottom_toBottomOf="@id/event_date_icon"
            app:layout_constraintStart_toEndOf="@id/event_date_icon"
            app:layout_constraintTop_toTopOf="@id/event_date_icon"
            tools:text="@tools:sample/lorem" />

        <ImageView
            android:id="@+id/type_of_event_icon"
            android:layout_width="@dimen/icon_button_min_size"
            android:layout_height="@dimen/icon_button_min_size"
            android:layout_marginVertical="@dimen/common_spacing"
            android:layout_marginEnd="@dimen/common_spacing"
            android:src="@drawable/online_event"
            app:layout_constraintTop_toBottomOf="@id/event_date_icon"
            android:contentDescription="@string/type_of_event" />

        <TextView
            android:id="@+id/event_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/common_spacing"
            app:layout_constraintBottom_toBottomOf="@id/type_of_event_icon"
            app:layout_constraintStart_toEndOf="@id/type_of_event_icon"
            app:layout_constraintTop_toTopOf="@id/type_of_event_icon"
            tools:text="@tools:sample/lorem" />

        <TextView
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_spacing"
            android:autoLink="web"
            android:paddingBottom="@dimen/dimen_to_barrier"
            app:layout_constraintTop_toBottomOf="@id/type_of_event_icon"
            tools:text="@tools:sample/lorem[30]" />

        <ImageView
            android:id="@+id/attachment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/attachment"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/content" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/footer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="attachment" />


        <ImageView
            android:id="@+id/like"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:contentDescription="@string/description_like_button"
            android:paddingVertical="@dimen/dimen_to_barrier"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/footer"
            app:srcCompat="@drawable/like_selector" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>